Making everything work

--- a/AutoServer/AutoServer.csproj
+++ b/AutoServer/AutoServer.csproj
@@ -41,100 +41,12 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="UnityEngine">
-      <HintPath>..\Spectrum.Dependencies\UnityEngine.dll</HintPath>
+      <HintPath>..\Spectrum\Spectrum.Dependencies\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ChatReplicationManager.cs" />
-    <Compile Include="CmdSettings\CmdSetting.cs" />
-    <Compile Include="CmdList.cs" />
-    <Compile Include="CmdSettings\CmdSettingSeconds.cs" />
-    <Compile Include="CmdSettings\CmdSettingString.cs" />
-    <Compile Include="CmdSettings\CmdSettingDouble.cs" />
-    <Compile Include="CmdSettings\CmdSettingInt.cs" />
-    <Compile Include="CmdSettings\CmdSettingBool.cs" />
-    <Compile Include="CmdSettings\UpdateResult.cs" />
-    <Compile Include="Cmds\AutoCmd.cs" />
-    <Compile Include="Cmds\AutoSpecCmd.cs" />
-    <Compile Include="Cmds\ClearCmd.cs" />
-    <Compile Include="Cmds\DateCmd.cs" />
-    <Compile Include="Cmds\DelsCmd.cs" />
-    <Compile Include="Cmds\LogCmd.cs" />
-    <Compile Include="Cmds\InfoCmd.cs" />
-    <Compile Include="Cmds\LoadCmd.cs" />
-    <Compile Include="Cmds\KickCmd.cs" />
-    <Compile Include="Cmds\FilterCmd.cs" />
-    <Compile Include="Cmds\SayCmd.cs" />
-    <Compile Include="Cmds\PlaylistCmd.cs" />
-    <Compile Include="Cmds\PluginCmd.cs" />
-    <Compile Include="Cmds\Cmd.cs" />
-    <Compile Include="Cmds\CountdownCmd.cs" />
-    <Compile Include="Cmds\DelCmd.cs" />
-    <Compile Include="Cmds\RestartCmd.cs" />
-    <Compile Include="Cmds\RipCmd.cs" />
-    <Compile Include="Cmds\SaveCmd.cs" />
-    <Compile Include="Cmds\ScoresCmd.cs" />
-    <Compile Include="Cmds\ForceStartCmd.cs" />
-    <Compile Include="Cmds\HelpCmd.cs" />
-    <Compile Include="Cmds\LevelCmd.cs" />
-    <Compile Include="Cmds\NameCmd.cs" />
-    <Compile Include="Cmds\PlayCmd.cs" />
-    <Compile Include="Cmds\ListCmd.cs" />
-    <Compile Include="Cmds\ServerCmd.cs" />
-    <Compile Include="Cmds\SettingsCmd.cs" />
-    <Compile Include="Cmds\ShuffleCmd.cs" />
-    <Compile Include="Cmds\PlayersCmd.cs" />
-    <Compile Include="Cmds\SpecCmd.cs" />
-    <Compile Include="Cmds\UnstuckCmd.cs" />
-    <Compile Include="Cmds\TimelimitCmd.cs" />
-    <Compile Include="Cmds\VoteHandler.cs" />
-    <Compile Include="Cmds\WelcomeCmd.cs" />
-    <Compile Include="Cmds\UpdateCmd.cs" />
-    <Compile Include="Cmds\StuckCmd.cs" />
-    <Compile Include="Cmds\WinCmd.cs" />
     <Compile Include="Entry.cs" />
-    <Compile Include="PlaylistTools\LevelFilterResult.cs" />
-    <Compile Include="PlaylistTools\LevelFilter.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\FloatComparison.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterLast.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterPlaylist.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterSaved.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterCreated.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\Sorts\LevelSortFilterMode.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\Sorts\LevelSortFilterIndex.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\Sorts\LevelSortFilterShuffle.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\Sorts\LevelSortFilterUpdated.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\Sorts\LevelSortFilterCreated.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\Sorts\LevelSortFilterStars.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\Sorts\LevelSortFilterTime.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\Sorts\LevelSortFilter.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\Sorts\LevelSortFilterAuthor.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\Sorts\LevelSortFilterDifficulty.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\Sorts\LevelSortFilterName.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\UIntComparison.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\IntComparison.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterUpdated.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterIsUpdated.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterIsNew.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterAuthor.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterAll.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterStars.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterTime.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterDifficulty.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterMode.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterPage.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterIndex.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterRegex.cs" />
-    <Compile Include="PlaylistTools\LevelFilters\LevelFilterName.cs" />
-    <Compile Include="PlaylistTools\FilteredPlaylist.cs" />
-    <Compile Include="PlaylistTools\PlaylistLevel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReleaseNotices.cs" />
-    <Compile Include="Utilities\DiffLine.cs" />
-    <Compile Include="Utilities\GeneralUtilities.cs" />
-    <Compile Include="Utilities\MessageUtilities.cs" />
-    <Compile Include="Utilities\PrivateUtilities.cs" />
-    <Compile Include="Utilities\ServerModVersion.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
