Starting server system

--- a/AutoServer/AutoServer.csproj
+++ b/AutoServer/AutoServer.csproj
@@ -50,6 +50,8 @@
     <Compile Include="States\BaseState.cs" />
     <Compile Include="States\InitializeServerState.cs" />
     <Compile Include="States\StateMachine.cs" />
+    <Compile Include="Utilities\Log.cs" />
+    <Compile Include="Utilities\Server.cs" />
     <Compile Include="Utilities\TimedAction.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
@@ -64,6 +66,10 @@
     <ProjectReference Include="..\Spectrum\Spectrum.API\Spectrum.API.csproj">
       <Project>{a9cfd86d-1604-4c80-b02b-e60ad98ba86f}</Project>
       <Name>Spectrum.API</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Spectrum\Spectrum.Interop\Spectrum.Interop.csproj">
+      <Project>{77c20b4a-284c-4b3d-a5b5-b254e637fb47}</Project>
+      <Name>Spectrum.Interop</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
